--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.7",
+        "chartjs-adapter-moment": "^1.0.1",
+        "flatpickr": "^4.6.13"
     }
 }
