--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "chart.js": "^4.4.7",
         "chartjs-adapter-moment": "^1.0.1",
+        "datatables.net-dt": "^2.2.1",
         "flatpickr": "^4.6.13"
     }
 }
